# zkbench-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/zkbench/: __init__.py  benchmark.py  platform_info.py  schema.py  statistics.py  utils.py
tests/: __init__.py  test_platform_info.py  test_schema.py  test_statistics.py  test_utils.py
