[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zkbench"
version = "0.1.0"
description = "Benchmark library for zero-knowledge proof implementations"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
